samples/_failures_safe/1761412544_6c1734_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6ba1d261.c: In function ‘main’:
./samples/SAFE/__tmp_6ba1d261.c:145:31: error: ‘pointcloud’ undeclared (first use in this function); did you mean ‘PointCloud’?
  145 |     struct PointCloud cloud = pointcloud
      |                               ^~~~~~~~~~
      |                               PointCloud
./samples/SAFE/__tmp_6ba1d261.c:145:31: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_6ba1d261.c:145:12: error: expected ‘,’ or ‘;’ at end of input
  145 |     struct PointCloud cloud = pointcloud
      |            ^~~~~~~~~~
./samples/SAFE/__tmp_6ba1d261.c:145:12: error: expected declaration or statement at end of input
